Fixed wrapping on tryit links

--- a/css/local.sass
+++ b/css/local.sass
@@ -275,15 +275,10 @@ ul.pages
   i.fa
     margin-top: 0.3em
   code
-    position: absolute
-    left: 2.5em
-    right: 3em
-    top: 0
-    bottom: 0
-    line-height: 3em
+    position: relative
+    top: 50%
+    transform: translateY(-50%)
     background-color: transparent
-    overflow-x: auto
-    overflow-y: hidden
   .hurl-it
     position: absolute
     right: 1em
